src/objects/Purchase_Order_Items__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Quantity__c  *  Unit_Price__c</formula>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Item_No__c</fullName>
        <label>PO Item No</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Purchase Order Items</relationshipLabel>
        <relationshipName>Purchase_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Purchase Order Item</label>
    <nameField>
        <label>Purchase Order Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>